--- a/GUI/style.css
+++ b/GUI/style.css
@@ -1,13 +1,12 @@
 body {
   background-image: url(/GUI/Images/starry.gif);
   background-repeat: repeat;
-  
+  font-family: 'Lucida Sans'
 }
 
 .search-container {
   width: 100%;
   min-height: 100vh;
-  display: flex;
   align-items: center;
   justify-content: center;
 }
@@ -20,6 +19,12 @@ body {
  align-items: center;
  border-radius: 2em;
  padding: 1em 2em;
+ margin: 0 auto;
+}
+
+#search-name{
+    color: white;
+    text-align: center;
 }
 
 #search-input {
@@ -29,6 +34,7 @@ body {
   outline: none;
   font-size: 20px;
   color: white;
+  font-family: 'Lucida Sans'
 }
 
 #results-container {
