--- a/static/style.css
+++ b/static/style.css
@@ -1,30 +1,32 @@
 body {
   background-image: url(../static/images/starry.gif);
   background-repeat: repeat;
-  font-family: 'Lucida Sans'
+  font-family: 'Lucida Sans';
 }
 
 .search-container {
   width: 100%;
-  min-height: 100vh;
   align-items: center;
   justify-content: center;
+  transition: height 0.3s;
+  overflow: hidden;
 }
 
 .search-bar {
- width: 100%;
- max-width: 45em;
- background: rgba(255, 255, 255, 0.2);
- display: flex;
- align-items: center;
- border-radius: 2em;
- padding: 1em 2em;
- margin: 0 auto;
+  width: 100%;
+  max-width: 45em;
+  background: rgba(255, 255, 255, 0.2);
+  display: flex;
+  align-items: center;
+  border-radius: 2em;
+  padding: 1em 2em;
+  margin: 0 auto;
+  transition: all 0.3s;
 }
 
-#search-name{
-    color: white;
-    text-align: center;
+#search-name {
+  color: lavender;
+  text-align: center;
 }
 
 #search-input {
@@ -34,20 +36,44 @@ body {
   outline: none;
   font-size: 20px;
   color: white;
-  font-family: 'Lucida Sans'
+  font-family: 'Lucida Sans';
 }
 
 #results-container {
-  text-align: center;
+  background-color: lavender;
+  max-width: 45em;
+  border-radius: 2em;
+  padding: 1em 2em;
+  margin: 0 auto;
 }
 
 #img-button {
-    border: 0;
-    border-radius: 50%;
-    background: transparent;
-    cursor: pointer;
+  border: 0;
+  border-radius: 50%;
+  background: transparent;
+  cursor: pointer;
 }
 
-#search-img{
-    height: 3em;
+#search-img {
+  height: 3em;
+}
+
+#results-container {
+  margin-top: 1em;
+}
+
+#results-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+#results-list li {
+  margin-bottom: 0.5em;
+}
+
+#results-list li a {
+  color: #333;
+  text-decoration: none;
+  font-weight: bold;
 }
