--- a/templates/index.html
+++ b/templates/index.html
@@ -32,9 +32,12 @@
               <p>{{ summary }}</p>
             </li>
             {% endfor %}
-          </ul>          
+          </ul>         
         </div>
       </div>
+      <div class="pagination">
+        {{ pagination.links }}
+      </div> 
     </div>
   </body>
 </html>
