--- a/static/searchResults/style.css
+++ b/static/searchResults/style.css
@@ -107,8 +107,8 @@ body::-webkit-scrollbar {
 }
 
 .page-button-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  justify-content: center;
   margin-bottom: 3rem;
 }
 
