--- a/templates/searchResults.html
+++ b/templates/searchResults.html
@@ -23,8 +23,8 @@
     </div>
 
     <div class="result-text">
-      <h2>Your search results for <u id="userQuery">{{userQuery}}</u> are:</h2>
-      <h3>Took about {{timeElapsed}} ms</h3>
+      <h3>Your search results for <u id="userQuery">{{userQuery}}</u> are:</h3>
+      <h5>(Took about {{timeElapsed}} ms)</h5>
     </div>
 
     {% for i in range(0, resultLen) %}
