--- a/static/searchResults/style.css
+++ b/static/searchResults/style.css
@@ -86,6 +86,8 @@ body::-webkit-scrollbar {
   overflow: auto;
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
+  min-width: 60%;
+  max-width: 60%;
 }
 
 .result-container::-webkit-scrollbar {
