--- a/templates/searchResults.html
+++ b/templates/searchResults.html
@@ -12,7 +12,7 @@
     <!-- https://www.quora.com/How-do-I-run-python-flask-file-when-click-a-HTML-button -->
     <div class="search-bar">
       <h1><a href="http://127.0.0.1:5000/">StellarSearch</a></h1>
-      <form action="http://127.0.0.1:5000/query" method="post" id="form">
+      <form action="http://127.0.0.1:5000/query" method="post">
         <label for="search"></label>
         <input
           type="text"
