have loading place holder for description

--- a/templates/searchResults.html
+++ b/templates/searchResults.html
@@ -34,10 +34,7 @@
         {{(i+1 * (curPage * 10))-9}}. <a target="_blank" href="{{results[i]}}">{{results[i]}}</a>
       </h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam
-        molestiae vitae aperiam magni autem voluptatum deleniti, sint
-        perspiciatis itaque excepturi sapiente laudantium illo quasi explicabo
-        officia eum nisi, eveniet ea.
+        Loading ...
       </p>
     </div>
     {% endfor %}
