--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,7 @@
   <body>
     <div class="search-bar">
       <h1>StellarSearch</h1>
+      <!-- Calculate query if user presses enter -->
       <form action="http://127.0.0.1:5000/query" method="post" id="form">
         <label for="search"></label>
         <input
