--- a/templates/searchResults.html
+++ b/templates/searchResults.html
@@ -11,7 +11,11 @@
   <body>
     <!-- https://www.quora.com/How-do-I-run-python-flask-file-when-click-a-HTML-button -->
     <div class="search-bar">
+
+      <!-- Go to home page if user clicks on query header -->
       <h1><a href="http://127.0.0.1:5000/">StellarSearch</a></h1>
+
+      <!-- Calculate query if user presses enter -->
       <form action="http://127.0.0.1:5000/query" method="post">
         <label for="search"></label>
         <input
@@ -22,11 +26,13 @@
       </form>
     </div>
 
+    <!-- Display query meta information to the user -->
     <div class="result-text">
       <h3>Your search results for <u id="userQuery">{{userQuery}}</u> are:</h3>
       <h5>(Took about {{timeElapsed}} ms)</h5>
     </div>
 
+    <!-- Display results to the user -->
     {% for i in range(0, resultLen) %}
     <div class="result-container">
 
@@ -41,6 +47,7 @@
 
 
     <!-- Cite: https://getcssscan.com/css-buttons-examples -->
+    <!-- Navigation buttons for query results -->
     <div class="page-button-container">
       {% if curPage != 1 %}
       <a href={{url_for('prevPage')}}><button class="button-64">Prev</button></a>
